@startuml
class logic.stone.Dynamite {
+ void destroy()
}

class logic.stone.WalkingStone {
+ void dig(int)
+ void walk()
}

class logic.stone.Stone {
# int posX
# int posY
+ void dig(int)
+ void destroy()
+ int getPosX()
+ int getPosY()
+ void setPosX(int)
+ void setPosY(int)
}


class logic.stone.HardStone {
# int durability
+ void dig(int)
+ int getDurability()
+ void setDurability(int)
}


class logic.stone.Gear {
~ int upgradeValue
+ void destroy()
+ int getUpgradeValue()
+ void setUpgradeValue(int)
}


class logic.stone.Crystal {
- int value
+ void dig(int)
+ void destroy()
+ int getValue()
+ void setValue(int)
}




logic.stone.Stone <|-- logic.stone.Dynamite
logic.stone.Stone <|-- logic.stone.WalkingStone
logic.stone.Stone <|-- logic.stone.HardStone
logic.stone.HardStone <|-- logic.stone.Gear
logic.stone.HardStone <|-- logic.stone.Crystal
@enduml